feat: use OPERATE-X-CSRF-TOKEN as CSRF token
Related with #6613